Redirect from Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 .StardosStencil-Regular{
     font-family: "StardosStencil-Regular", serif;
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+  
